--- a/src/output.css
+++ b/src/output.css
@@ -684,16 +684,12 @@ video {
   margin-top: 1rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mt-9 {
+  margin-top: 2.25rem;
 }
 
 .mt-auto {
   margin-top: auto;
-}
-
-.mt-9 {
-  margin-top: 2.25rem;
 }
 
 .flex {
@@ -919,6 +915,18 @@ video {
   background-position: center;
 }
 
+.bg-right {
+  background-position: right;
+}
+
+.bg-left {
+  background-position: left;
+}
+
+.bg-right-bottom {
+  background-position: right bottom;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -927,12 +935,12 @@ video {
   padding: 0.375rem;
 }
 
-.p-7 {
-  padding: 1.75rem;
-}
-
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-7 {
+  padding: 1.75rem;
 }
 
 .px-2 {
@@ -1162,6 +1170,10 @@ video {
 
   .md\:gap-14 {
     gap: 3.5rem;
+  }
+
+  .md\:bg-center {
+    background-position: center;
   }
 
   .md\:text-left {
